[project]
name = "openlayers"
version = "0.1.0-rc.1"
description = "Python Bindings for OpenLayersJS"
readme = "README.md"
authors = [{ name = "Stefan Kuethe", email = "stefan.kuethe@eoda.de" }]
requires-python = ">=3.9, <4"
dependencies = ["anywidget>=0.9.0", "jinja2>=3.1.6", "pydantic>=2.5.3"]

# [project.scripts]
# openlayers = "openlayers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "geopandas>=1.0.1",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "marimo>=0.13.2",
    "pyproj>=3.6.1",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
